Closed Bug 1675990 Opened 5 years ago Closed 5 years ago

video on twitter is slow with sw-wr

Categories

(Core :: Graphics: WebRender, defect, P3)

defect

Tracking

()

RESOLVED FIXED
85 Branch
Tracking Status
firefox85 --- fixed

People

(Reporter: jrmuizel, Assigned: lsalzman)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Sometimes video is drawn with rounded corners that causes us to go slow:

https://share.firefox.dev/36dJXXE

Blocks: sw-wr-perf
Severity: -- → S3
Priority: -- → P3
Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Pushed by lsalzman@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5e315caacc27 implement SWGL fast-path for WR brush_yuv_image shader. r=jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch
Blocks: 1674944
Regressions: 1678192
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: