Bug 1675990 - implement SWGL fast-path for WR brush_yuv_image shader. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D97246