gfx/wr/webrender/res/brush_yuv_image.glsl
@@ -26,6 +26,11 @@ flat varying mat3 vYuvColorMatrix;
 flat varying vec3 vYuvOffsetVector;
 flat varying int vFormat;
 
+#ifdef SWGL
+flat varying int vYuvColorSpace;
+flat varying int vRescaleFactor;
+#endif
+
 #ifdef WR_VERTEX_SHADER
 
 struct YuvPrimitive {
@@ -59,6 +64,14 @@ void brush_vs(
     vYuvColorMatrix = get_yuv_color_matrix(prim.color_space);
     vYuvOffsetVector = get_yuv_offset_vector(prim.color_space);
     vFormat = prim.yuv_format;
+
+#ifdef SWGL
+    // swgl_commitTextureLinearYUV needs to know the color space specifier and
+    // also needs to know how many bits of scaling are required to normalize
+    // HDR textures.
+    vYuvColorSpace = prim.color_space;
+    vRescaleFactor = int(log2(prim.coefficient));
+#endif
 
 #ifdef WR_FEATURE_ALPHA_PASS
     vLocalPos = vi.local_pos;
@@ -109,4 +122,110 @@ Fragment brush_fs() {
 
     return Fragment(color);
 }
+
+#ifdef SWGL
+void swgl_drawSpanRGBA8() {
+    if (vFormat == YUV_FORMAT_PLANAR) {
+        if (!swgl_isTextureLinear(sColor0) || !swgl_isTextureLinear(sColor1) || !swgl_isTextureLinear(sColor2)) {
+            return;
+        }
+
+        int layer0 = swgl_textureLayerOffset(sColor0, vYuvLayers.x);
+        vec2 uv0 = swgl_linearQuantize(sColor0, vUv_Y);
+        vec2 min_uv0 = swgl_linearQuantize(sColor0, vUvBounds_Y.xy);
+        vec2 max_uv0 = swgl_linearQuantize(sColor0, vUvBounds_Y.zw);
+        vec2 step_uv0 = swgl_linearQuantizeStep(sColor0, swgl_interpStep(vUv_Y));
+
+        int layer1 = swgl_textureLayerOffset(sColor1, vYuvLayers.y);
+        vec2 uv1 = swgl_linearQuantize(sColor1, vUv_U);
+        vec2 min_uv1 = swgl_linearQuantize(sColor1, vUvBounds_U.xy);
+        vec2 max_uv1 = swgl_linearQuantize(sColor1, vUvBounds_U.zw);
+        vec2 step_uv1 = swgl_linearQuantizeStep(sColor1, swgl_interpStep(vUv_U));
+
+        int layer2 = swgl_textureLayerOffset(sColor2, vYuvLayers.z);
+        vec2 uv2 = swgl_linearQuantize(sColor2, vUv_V);
+        vec2 min_uv2 = swgl_linearQuantize(sColor2, vUvBounds_V.xy);
+        vec2 max_uv2 = swgl_linearQuantize(sColor2, vUvBounds_V.zw);
+        vec2 step_uv2 = swgl_linearQuantizeStep(sColor2, swgl_interpStep(vUv_V));
+
+        while (swgl_SpanLength > 0) {
+            #ifdef WR_FEATURE_ALPHA_PASS
+                float alpha = init_transform_fs(vLocalPos) * do_clip();
+                vLocalPos += swgl_interpStep(vLocalPos);
+                vClipMaskUv += swgl_interpStep(vClipMaskUv);
+                swgl_commitTextureLinearColorYUV(sColor0, clamp(uv0, min_uv0, max_uv0), layer0,
+                                                 sColor1, clamp(uv1, min_uv1, max_uv1), layer1,
+                                                 sColor2, clamp(uv2, min_uv2, max_uv2), layer2,
+                                                 vYuvColorSpace, vRescaleFactor, alpha);
+            #else
+                swgl_commitTextureLinearYUV(sColor0, clamp(uv0, min_uv0, max_uv0), layer0,
+                                            sColor1, clamp(uv1, min_uv1, max_uv1), layer1,
+                                            sColor2, clamp(uv2, min_uv2, max_uv2), layer2,
+                                            vYuvColorSpace, vRescaleFactor);
+            #endif
+            uv0 += step_uv0;
+            uv1 += step_uv1;
+            uv2 += step_uv2;
+        }
+    } else if (vFormat == YUV_FORMAT_NV12) {
+        if (!swgl_isTextureLinear(sColor0) || !swgl_isTextureLinear(sColor1)) {
+            return;
+        }
+
+        int layer0 = swgl_textureLayerOffset(sColor0, vYuvLayers.x);
+        vec2 uv0 = swgl_linearQuantize(sColor0, vUv_Y);
+        vec2 min_uv0 = swgl_linearQuantize(sColor0, vUvBounds_Y.xy);
+        vec2 max_uv0 = swgl_linearQuantize(sColor0, vUvBounds_Y.zw);
+        vec2 step_uv0 = swgl_linearQuantizeStep(sColor0, swgl_interpStep(vUv_Y));
+
+        int layer1 = swgl_textureLayerOffset(sColor1, vYuvLayers.y);
+        vec2 uv1 = swgl_linearQuantize(sColor1, vUv_U);
+        vec2 min_uv1 = swgl_linearQuantize(sColor1, vUvBounds_U.xy);
+        vec2 max_uv1 = swgl_linearQuantize(sColor1, vUvBounds_U.zw);
+        vec2 step_uv1 = swgl_linearQuantizeStep(sColor1, swgl_interpStep(vUv_U));
+
+        while (swgl_SpanLength > 0) {
+            #ifdef WR_FEATURE_ALPHA_PASS
+                float alpha = init_transform_fs(vLocalPos) * do_clip();
+                vLocalPos += swgl_interpStep(vLocalPos);
+                vClipMaskUv += swgl_interpStep(vClipMaskUv);
+                swgl_commitTextureLinearColorYUV(sColor0, clamp(uv0, min_uv0, max_uv0), layer0,
+                                                 sColor1, clamp(uv1, min_uv1, max_uv1), layer1,
+                                                 vYuvColorSpace, vRescaleFactor, alpha);
+            #else
+                swgl_commitTextureLinearYUV(sColor0, clamp(uv0, min_uv0, max_uv0), layer0,
+                                            sColor1, clamp(uv1, min_uv1, max_uv1), layer1,
+                                            vYuvColorSpace, vRescaleFactor);
+            #endif
+            uv0 += step_uv0;
+            uv1 += step_uv1;
+        }
+    } else if (vFormat == YUV_FORMAT_INTERLEAVED) {
+        if (!swgl_isTextureLinear(sColor0)) {
+            return;
+        }
+
+        int layer0 = swgl_textureLayerOffset(sColor0, vYuvLayers.x);
+        vec2 uv0 = swgl_linearQuantize(sColor0, vUv_Y);
+        vec2 min_uv0 = swgl_linearQuantize(sColor0, vUvBounds_Y.xy);
+        vec2 max_uv0 = swgl_linearQuantize(sColor0, vUvBounds_Y.zw);
+        vec2 step_uv0 = swgl_linearQuantizeStep(sColor0, swgl_interpStep(vUv_Y));
+
+        while (swgl_SpanLength > 0) {
+            #ifdef WR_FEATURE_ALPHA_PASS
+                float alpha = init_transform_fs(vLocalPos) * do_clip();
+                vLocalPos += swgl_interpStep(vLocalPos);
+                vClipMaskUv += swgl_interpStep(vClipMaskUv);
+                swgl_commitTextureLinearColorYUV(sColor0, clamp(uv0, min_uv0, max_uv0), layer0,
+                                                 vYuvColorSpace, vRescaleFactor, alpha);
+            #else
+                swgl_commitTextureLinearYUV(sColor0, clamp(uv0, min_uv0, max_uv0), layer0,
+                                            vYuvColorSpace, vRescaleFactor);
+            #endif
+            uv0 += step_uv0;
+        }
+    }
+}
+#endif
+
 #endif
